testing files in TurnTestInput repository

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "TURNTestInput"]
 	path = TURNTestInput
 	url = https://github.com/JUCMNAV/TURNTestInput.git
+	branch = OneValidationErrorFiles
